--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "mongodb": "^2.0.43",
     "redisq": "^0.1.18",
     "winston": "^1.0.1",
-    "qiniu": "^6.1.8"
+    "qiniu": "^6.1.8",
+    "bee-queue": "^0.3.0"
   },
   "devDependencies": {},
   "scripts": {
