--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "redisq": "^0.1.18",
     "winston": "^1.0.1",
     "qiniu": "^6.1.8",
+    "urllib": "^2.8.0",
     "bee-queue": "^0.3.0"
   },
   "devDependencies": {},
