--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "qiniu": "^6.1.8",
     "urllib": "^2.8.0",
     "bee-queue": "^0.3.0",
-    "redis": "^2.5.2"
+    "redis": "^2.5.2",
+    "express": "^4.14.0",
+    "body-parser": "^1.15.2"
   },
   "devDependencies": {},
   "scripts": {
